added data loading and training code

--- a/test.ipynb
+++ b/test.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 2.8333,  3.5809,  7.0268,  ..., -1.2470, -1.2469, -1.2468],\n",
+       "        [14.2424,  4.3746,  4.5395,  ..., -1.9085, -1.9087, -1.9092],\n",
+       "        [ 8.1138, -0.6880,  0.9197,  ..., -0.8815, -0.8822, -0.8828],\n",
+       "        [18.7669,  7.0025,  4.4708,  ..., -0.8601, -0.8603, -0.8607],\n",
+       "        [ 6.7835, 11.4848,  9.7997,  ..., -1.0438, -1.0439, -1.0437],\n",
+       "        [ 8.8547, 10.7931,  5.9058,  ..., -0.3585, -0.3590, -0.3580]],\n",
+       "       grad_fn=<SelectBackward0>)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"hello, hello!\\n\\nI\"\n",
+    "ts = torch.tensor(tokenizer([s])[\"input_ids\"])\n",
+    "model.forward(ts).logits[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input_ids': [128000, 15339, 128009, 128000, 128009], 'attention_mask': [1, 1, 1, 1, 1]}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer(\"hello\"+tokenizer.eos_token, tokenizer.eos_token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +152,7 @@
        ")"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +249,7 @@
        ")"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,95 +335,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LlamaForCausalLM(\n",
-       "  (model): LlamaModel(\n",
-       "    (embed_tokens): Embedding(128256, 2048)\n",
-       "    (layers): ModuleList(\n",
-       "      (0-15): 16 x LlamaDecoderLayer(\n",
-       "        (self_attn): LlamaSdpaAttention(\n",
-       "          (q_proj): LoraModule(\n",
-       "            (original_module): Linear(in_features=2048, out_features=2048, bias=False)\n",
-       "            (lora_module): Sequential(\n",
-       "              (0): Linear(in_features=2048, out_features=8, bias=False)\n",
-       "              (1): Linear(in_features=8, out_features=2048, bias=False)\n",
-       "            )\n",
-       "          )\n",
-       "          (k_proj): LoraModule(\n",
-       "            (original_module): Linear(in_features=2048, out_features=512, bias=False)\n",
-       "            (lora_module): Sequential(\n",
-       "              (0): Linear(in_features=2048, out_features=8, bias=False)\n",
-       "              (1): Linear(in_features=8, out_features=512, bias=False)\n",
-       "            )\n",
-       "          )\n",
-       "          (v_proj): LoraModule(\n",
-       "            (original_module): Linear(in_features=2048, out_features=512, bias=False)\n",
-       "            (lora_module): Sequential(\n",
-       "              (0): Linear(in_features=2048, out_features=8, bias=False)\n",
-       "              (1): Linear(in_features=8, out_features=512, bias=False)\n",
-       "            )\n",
-       "          )\n",
-       "          (o_proj): LoraModule(\n",
-       "            (original_module): Linear(in_features=2048, out_features=2048, bias=False)\n",
-       "            (lora_module): Sequential(\n",
-       "              (0): Linear(in_features=2048, out_features=8, bias=False)\n",
-       "              (1): Linear(in_features=8, out_features=2048, bias=False)\n",
-       "            )\n",
-       "          )\n",
-       "          (rotary_emb): LlamaRotaryEmbedding()\n",
-       "        )\n",
-       "        (mlp): LlamaMLP(\n",
-       "          (gate_proj): LoraModule(\n",
-       "            (original_module): Linear(in_features=2048, out_features=8192, bias=False)\n",
-       "            (lora_module): Sequential(\n",
-       "              (0): Linear(in_features=2048, out_features=8, bias=False)\n",
-       "              (1): Linear(in_features=8, out_features=8192, bias=False)\n",
-       "            )\n",
-       "          )\n",
-       "          (up_proj): LoraModule(\n",
-       "            (original_module): Linear(in_features=2048, out_features=8192, bias=False)\n",
-       "            (lora_module): Sequential(\n",
-       "              (0): Linear(in_features=2048, out_features=8, bias=False)\n",
-       "              (1): Linear(in_features=8, out_features=8192, bias=False)\n",
-       "            )\n",
-       "          )\n",
-       "          (down_proj): LoraModule(\n",
-       "            (original_module): Linear(in_features=8192, out_features=2048, bias=False)\n",
-       "            (lora_module): Sequential(\n",
-       "              (0): Linear(in_features=8192, out_features=8, bias=False)\n",
-       "              (1): Linear(in_features=8, out_features=2048, bias=False)\n",
-       "            )\n",
-       "          )\n",
-       "          (act_fn): SiLU()\n",
-       "        )\n",
-       "        (input_layernorm): LlamaRMSNorm((2048,), eps=1e-05)\n",
-       "        (post_attention_layernorm): LlamaRMSNorm((2048,), eps=1e-05)\n",
-       "      )\n",
-       "    )\n",
-       "    (norm): LlamaRMSNorm((2048,), eps=1e-05)\n",
-       "    (rotary_emb): LlamaRotaryEmbedding()\n",
-       "  )\n",
-       "  (lm_head): Linear(in_features=2048, out_features=128256, bias=False)\n",
-       ")"
+       "False"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "model"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
