adding lora dumping and loading functionality

--- a/train.ipynb
+++ b/train.ipynb
@@ -460,6 +460,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del tmp_model"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
